Add heartbeat implementation
